[tool.poetry]
name = "example"
version = "0.1.0"
description = "Example"
authors = ["Harshad Sharma <harshad@sharma.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nicegui = "^1.2.20"
honcho = "^1.1.0"
apscheduler = "^3.10.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
